--- a/index.html
+++ b/index.html
@@ -34,11 +34,26 @@
                     <div class="cart_item">
                         <img src="img/cart_img_1.png" alt="cart_img_1">
                         <div class="cart_item_info">
-                            <p class="cart_item_name">
-                                rebox
-                                zane
-                            </p>
+                            <p class="cart_item_name">rebox zane</p>
+                            <img class="cart_stars" src="img/cart_stars.png" alt="cart_stars">
+                            <p class="cart_price">1 x $250</p>
                         </div>
+                        <img class="cart_cancel" src="img/cart_cancel.png" alt="cross">
+                    </div>
+                    <hr class="cart_item_line">
+                    <div class="cart_item">
+                        <img src="img/cart_img_2.png" alt="cart_img_2">
+                        <div class="cart_item_info">
+                            <p class="cart_item_name">rebox zane</p>
+                            <img class="cart_stars" src="img/cart_stars.png" alt="cart_stars">
+                            <p class="cart_price">1 x $250</p>
+                        </div>
+                        <img class="cart_cancel" src="img/cart_cancel.png" alt="cross">
+                    </div>
+                    <hr class="cart_item_line">
+                    <div class="cart_total">
+                        <p class="total_price_text">total</p>
+                        <p class="total_price_text">$500</p>
                     </div>
                 </div>
                 <a class="account_button text_button" href="#">
@@ -46,7 +61,6 @@
                 </a>
             </div>
         </div>
-
     </div>
     <div class="nav">
         <div class="container">
