--- a/checkout.html
+++ b/checkout.html
@@ -115,6 +115,8 @@
                         <p class="total_price_text">total</p>
                         <p class="total_price_text">$500</p>
                     </div>
+                    <a href="checkout.html" class="live_cart_checkout">checkout</a>
+                    <a href="shopping_cart.html" class="go_to_cart">go to cart</a>
                 </div>
                 <a class="account_button text_button" href="#">
                     My Account
