--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                         <p class="total_price_text">total</p>
                         <p class="total_price_text">$500</p>
                     </div>
+                    <a href="checkout.html" class="live_cart_checkout">checkout</a>
+                    <a href="shopping_cart.html" class="go_to_cart">go to cart</a>
                 </div>
                 <a class="account_button text_button" href="#">
                     My Account
@@ -1085,7 +1087,8 @@
                         array of
                         processes and cross-unit partnerships.
                     </p>
-                    <p class="text footer_text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+                    <p class="text footer_text">Efficiently plagiarize 24/365 action items and focused
+                        infomediaries.
                         Distinctively seize
                         superior initiatives for wireless technologies. Dynamically optimize.</p>
                 </div>
