--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 <img class="cart" src="img/cart.svg" alt="cart">
                 <div class="live_cart">
                     <div class="cart_item">
-                        <img src="img/cart_img_1.png" alt="cart_img_1">
+                        <a href="single_page.html">
+                            <img src="img/cart_img_1.png" alt="cart_img_1">
+                        </a>
                         <div class="cart_item_info">
                             <p class="cart_item_name">rebox zane</p>
                             <img class="cart_stars" src="img/cart_stars.png" alt="cart_stars">
@@ -102,7 +104,9 @@
                     </div>
                     <hr class="cart_item_line">
                     <div class="cart_item">
-                        <img src="img/cart_img_2.png" alt="cart_img_2">
+                        <a href="single_page.html">
+                            <img src="img/cart_img_2.png" alt="cart_img_2">
+                        </a>
                         <div class="cart_item_info">
                             <p class="cart_item_name">rebox zane</p>
                             <img class="cart_stars" src="img/cart_stars.png" alt="cart_stars">
@@ -907,7 +911,7 @@
         </div>
         <div class="product_list">
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_1.png" alt="product_1">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -920,7 +924,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_2.png" alt="product_2">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -933,7 +937,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_3.png" alt="product_3">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -946,7 +950,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_4.png" alt="product_4">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -959,7 +963,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_5.png" alt="product_5">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -972,7 +976,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_6.png" alt="product_6">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -985,7 +989,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_7.png" alt="product_7">
                     <p class="text_box">mango people
                         t-shirt</p>
@@ -998,7 +1002,7 @@
                 </div>
             </div>
             <div class="product_box">
-                <a class="link" href="index.html">
+                <a class="link" href="single_page.html">
                     <img class="product_box_img" src="img/product_8.png" alt="product_8">
                     <p class="text_box">mango people
                         t-shirt</p>
