--- a/product.html
+++ b/product.html
@@ -856,7 +856,341 @@
             </div>
         </div>
     </div>
-    <aside class="product_category"></aside>
+    <div class="product_main container">
+        <aside class="product_aside">
+            <details class="product_aside_details">
+                <summary class="new_arrivals_text new_arrivals_text_pink product_summary">category</summary>
+                <a href="#" class="product_aside_details_link">Accessories</a>
+                <a href="#" class="product_aside_details_link">Bags</a>
+                <a href="#" class="product_aside_details_link">Denim</a>
+                <a href="#" class="product_aside_details_link">Hoodies & Sweatshirts</a>
+                <a href="#" class="product_aside_details_link">Jackets & Coats</a>
+                <a href="#" class="product_aside_details_link">Pants</a>
+                <a href="#" class="product_aside_details_link">Polos</a>
+                <a href="#" class="product_aside_details_link">Shirts</a>
+                <a href="#" class="product_aside_details_link">Shoes</a>
+                <a href="#" class="product_aside_details_link">Sweaters & Knits</a>
+                <a href="#" class="product_aside_details_link">T-Shirts</a>
+                <a href="#" class="product_aside_details_link">Tanks</a>
+            </details>
+            <details class="product_aside_details">
+                <summary class="new_arrivals_text new_arrivals_text_pink product_summary">BRAND</summary>
+                <a href="#" class="product_aside_details_link">Accessories</a>
+                <a href="#" class="product_aside_details_link">Bags</a>
+                <a href="#" class="product_aside_details_link">Denim</a>
+                <a href="#" class="product_aside_details_link">Hoodies & Sweatshirts</a>
+                <a href="#" class="product_aside_details_link">Jackets & Coats</a>
+                <a href="#" class="product_aside_details_link">Pants</a>
+                <a href="#" class="product_aside_details_link">Polos</a>
+                <a href="#" class="product_aside_details_link">Shirts</a>
+                <a href="#" class="product_aside_details_link">Shoes</a>
+                <a href="#" class="product_aside_details_link">Sweaters & Knits</a>
+                <a href="#" class="product_aside_details_link">T-Shirts</a>
+                <a href="#" class="product_aside_details_link">Tanks</a>
+            </details>
+            <details class="product_aside_details">
+                <summary class="new_arrivals_text new_arrivals_text_pink product_summary">dESIGNER</summary>
+                <a href="#" class="product_aside_details_link">Accessories</a>
+                <a href="#" class="product_aside_details_link">Bags</a>
+                <a href="#" class="product_aside_details_link">Denim</a>
+                <a href="#" class="product_aside_details_link">Hoodies & Sweatshirts</a>
+                <a href="#" class="product_aside_details_link">Jackets & Coats</a>
+                <a href="#" class="product_aside_details_link">Pants</a>
+                <a href="#" class="product_aside_details_link">Polos</a>
+                <a href="#" class="product_aside_details_link">Shirts</a>
+                <a href="#" class="product_aside_details_link">Shoes</a>
+                <a href="#" class="product_aside_details_link">Sweaters & Knits</a>
+                <a href="#" class="product_aside_details_link">T-Shirts</a>
+                <a href="#" class="product_aside_details_link">Tanks</a>
+            </details>
+        </aside>
+        <div class="product_search">
+            <form class="product_search_top" oninput="product_range_min.value=(product_range.value)" action="#">
+                <div class="product_search_block">
+                    <h3 class="product_search_title">Trending now</h3>
+                    <div class="trending_now_textbox">
+                        <span class="trending_now_text">Bohemian</span>
+                        <div class="trending_now_line"></div>
+                        <span class="trending_now_text">Floral</span>
+                        <div class="trending_now_line"></div>
+                        <span class="trending_now_text">Lace</span>
+                    </div>
+                    <div class="trending_now_textbox">
+                        <span class="trending_now_text">Lace</span>
+                        <div class="trending_now_line"></div>
+                        <span class="trending_now_text">Floral</span>
+                        <div class="trending_now_line"></div>
+                        <span class="trending_now_text">Bohemian</span>
+                    </div>
+                </div>
+                <div class="product_search_block">
+                    <h3 class="product_search_title">size</h3>
+                    <div class="checkbox_row">
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            xxs
+                        </label>
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            xs
+                        </label>
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            s
+                        </label>
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            m
+                        </label>
+                    </div>
+                    <div class="checkbox_row">
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            l
+                        </label>
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            xl
+                        </label>
+                        <label class="checkbox_container">
+                            <input type="checkbox" class="checkbox_size">
+                            <span class="checkmark_size"></span>
+                            xxl
+                        </label>
+                    </div>
+                </div>
+                <div class="product_search_block">
+                    <h3 class="product_search_title">Price</h3>
+                    <input type="range" value="52" step="1" min="1" max="1000" class="product_range_slider"
+                        id="product_range">
+                    <p class="trending_now_text">
+                        $
+                        <output name="product_range_min" for="product_range_a" class="product_range_output">52</output>
+                    </p>
+                </div>
+            </form>
+            <div class="product_sort">
+                <div class="product_sort_block">
+                    <p class="trending_now_text">Sort By</p>
+                </div>
+                <div class="product_sort_select_wrapper">
+                    <select class="product_sort_select trending_now_text">
+                        <option>Name</option>
+                        <option>Price</option>
+                        <option>Size</option>
+                        <option>Category</option>
+                        <option>Brand</option>
+                        <option>Designer</option>
+                    </select>
+                </div>
+                <div class="product_sort_block">
+                    <p class="trending_now_text">Show</p>
+                </div>
+                <div class="product_sort_select_wrapper">
+                    <select class="product_sort_select trending_now_text">
+                        <option>09</option>
+                        <option>08</option>
+                        <option>07</option>
+                        <option>06</option>
+                        <option>05</option>
+                        <option>04</option>
+                        <option>03</option>
+                        <option>02</option>
+                        <option>01</option>
+                    </select>
+                </div>
+            </div>
+            <div class="product_list">
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_1.png" alt="product_1">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_2.png" alt="product_2">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_3.png" alt="product_3">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_3.png" alt="product_4">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_8.png" alt="product_5">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_4.png" alt="product_6">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_6.png" alt="product_7">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_5.png" alt="product_8">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+                <div class="product_box">
+                    <a class="link" href="single_page.html">
+                        <img class="product_box_img" src="img/product_sort_img_6.png" alt="product_9">
+                        <p class="text_box">mango people
+                            t-shirt</p>
+                        <p class="text_box text_box_pink">
+                            $52.00</p>
+                    </a>
+                    <div class="box_add">
+                        <a class="add" href="#"><img class="product_cart" src="img/cart.svg" alt="cart">
+                            Add to Cart</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product_search_bottom">
+                <nav class="page_navigation">
+                    <ul class="pagination">
+                        <li class="page_item">
+                            <a class="page_link" href="#">
+                                <i class="fas fa-chevron-left"></i>
+                            </a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link page_active" href="#">1</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">2</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">3</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">4</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">5</a>
+                        </li>
+                        <li class="page_item page_dots">
+                            <a class="page_link" href="#">6</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">20</a>
+                        </li>
+                        <li class="page_item">
+                            <a class="page_link" href="#">
+                                <i class="fas fa-chevron-right"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <a href="checkout.html" class="live_cart_checkout product_sort_button">View All</a>
+            </div>
+        </div>
+    </div>
+    <div class="product_sort_feature container">
+        <div class="feature_item">
+            <img class="product_feature_img" src="img/feature_1.svg" alt="feature_1">
+            <h3 class="feature_hedding product_feature_hedding">Free Delivery</h3>
+            <p class="text feature_text product_feature_text">Worldwide delivery on all. Authorit
+                tively morph
+                next-generation innovation with extensive models.
+            </p>
+        </div>
+        <div class="feature_item">
+            <img class="product_feature_img" src="img/feature_2.svg" alt="feature_2">
+            <h3 class="feature_hedding product_feature_hedding">Sales & discounts</h3>
+            <p class="text feature_text product_feature_text">Worldwide delivery on all. Authorit
+                tively morph
+                next-generation innovation with extensive models.
+            </p>
+        </div>
+        <div class="feature_item">
+            <img class="product_feature_img" src="img/feature_3.svg" alt="feature_3">
+            <h3 class="feature_hedding product_feature_hedding">Quality assurance</h3>
+            <p class="text feature_text product_feature_text">Worldwide delivery on all. Authorit
+                tively morph
+                next-generation innovation with extensive models.
+            </p>
+        </div>
+    </div>
     <div class="subscribe">
         <img src="img/subscribe_back.png" alt="subs_back" style="opacity:0.25">
         <div class="subscribe_flex container">
@@ -908,7 +1242,8 @@
                         array of
                         processes and cross-unit partnerships.
                     </p>
-                    <p class="text footer_text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+                    <p class="text footer_text">Efficiently plagiarize 24/365 action items and focused
+                        infomediaries.
                         Distinctively seize
                         superior initiatives for wireless technologies. Dynamically optimize.</p>
                 </div>
