--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
     <div class="categories container">
         <div class="categories_parent">
             <div class="categories_item">
-                <a href="index.html">
+                <a href="single_page.html">
                     <img src="img/categories_item_1.png" alt="categories_item_1">
                     <div class="news-txt">
                         <p><strong>hot deal</strong></p>
@@ -872,7 +872,7 @@
 
             </div>
             <div class="categories_item">
-                <a href="index.html">
+                <a href="single_page.html">
                     <img src="img/categories_item_2.png" alt="categories_item_2">
                     <div class="news-txt">
                         <p><strong>luxirous & trandy</strong></p>
@@ -883,7 +883,7 @@
         </div>
         <div class="categories_parent">
             <div class="categories_item">
-                <a href="index.html">
+                <a href="single_page.html">
                     <img src="img/categories_item_3.png" alt="categories_item_3">
                     <div class="news-txt">
                         <p><strong>30% offer</strong></p>
@@ -892,7 +892,7 @@
                 </a>
             </div>
             <div class="categories_item">
-                <a href="index.html">
+                <a href="single_page.html">
                     <img src="img/categories_item_4.png" alt="categories_item_4">
                     <div class="news-txt">
                         <p><strong>new arrivals</strong></p>
@@ -1015,7 +1015,7 @@
                 </div>
             </div>
         </div>
-        <a class="browse_all_product_button browse_all_product_text" href="#">Browse
+        <a class="browse_all_product_button browse_all_product_text" href="product.html">Browse
             All
             Product
         </a>
